syntax = "proto3";

package calendar;

option go_package = "./pkg/calendar";

service CalendarService {
    rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {}
    rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
}

message Event {
    string id = 1;
    string name = 2;
    uint32 start = 3;
    uint32 end = 4;
}

enum Status {
    SUCCESS = 0;
    ERROR = 1;
}

// create
message CreateEventRequest {
    string name = 1;
    uint32 start = 2;
    uint32 ent = 3;
}

message CreateEventResponse {
    Status status = 1;
    string error = 2;
    Event data = 3;
}

// find one
message FindOneRequest {
    string id = 1;
}

message FindOneResponse {
    Status status = 1;
    string error = 2;
    Event data = 3;
}